[package]
name = "megam_rustyprint"
version = "0.1.1"
authors = ["Raj thilak <rajthilak@megam.io>"]
description = """
A pretty printer table make for clit. Takes a matrix of [x,y] rows with a header [x] cols and prints it in a neat way.
"""

documentation = "https://github.com/megamsys/megam_rustyprint"
homepage = "https://www.megam.io"
repository = "https://github.com/megamsys/megam_rustyprint"

readme = "README.md"

keywords = ["api", "rest", "excon", "megam", "prettyprint"]

license = "Apache-2.0"

[lib]
name = "megam_rustyprint"
path = "src/megam_rustyprint/lib.rs"

[dependencies]
log = "0.3.1"
term-painter = "0.1.1"

[[test]]
name = "tests"
